--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,10 +4,10 @@ z: 0
 m_min: 1
 M_min: 1
 M_max: 1e16
-N_M: 60
+N_M: 50
 k_min: 1e-1
 k_max: 1e4
-N_k: 60
+N_k: 50
 Delta_vir: 340 #See figure 1 in eke et al. for some value of Omega_m
 d_vir: 1
 
@@ -34,8 +34,8 @@ M_pivot: 1
 alpha: 0
 
 #clump mass function parameters
-m_pivot: 1e11
-alpha_clump: 0
+m0: 1e11
+beta: 0
 
 #data storage
 Pm_dir: '/home/milan/Desktop/thesis/code/data/matter_power_spectra/regular'
